// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="cr08vvv soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cbgmmzo soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c-yru59g soui-slider-track"
    >
      <div
        class="c-piwj6u soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-6bywo0 soui-slider-indicator c6vcnmj soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-83ex23 soui-slider-end-value c-yr169q soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="cr08vvv soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="crsphyz soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
